Show the transition checker data in the account manager

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,7 @@ en:
       user_details:
         email: "Email address"
         test: "Local development testing data"
+        transition_checker_state: "GOV.UK transition data"
   welcome:
     show:
       title: "Create a GOV.UK account"
