Unfinished: Begin to shift overto use I8tn instead of hard coded strings
We've decided to close this branch in favour of another for expediency. We've booked a chat about testing on the 2nd Nov 2020, pushing this in an unfinished form as it may prove good reference for any new tests or future rewrites

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -148,9 +148,9 @@ en:
             <p class="govuk-body">You’ll never get more than one email a day. The email will include all the updates made that day.</p>
           unsubscribe: You can unsubscribe from emails or change your subscription at any time.
           fields:
-            emailsignup:
+            email_signup:
               heading: Do you want to receive emails about the UK transition?
-              yes: Yes
+              yes: "Yes"
               no: No, I just want to save my results
             submit:
               label: Continue
