--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,7 +80,9 @@ en:
     content: Enter the email address you used to create your GOV.UK account. We’ll email you a link so you can reset your password. The link will expire 6 hours later.
     heading: Change your password
   confirm:
-    intro: "<strong>Confirm your email address</strong> to finish updating your account and email alerts."
+    intro:
+      set_up: "<strong>Confirm your email address</strong> to finish setting up your account and email alerts."
+      update: "<strong>Confirm your email address</strong> to finish updating your account and email alerts."
     link_text: Resend confirmation email
   confirmation_sent:
     continue_to_account: Go to your GOV.UK account
